-
Type:
Bug
-
Status: Closed
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 0.12.0
-
Fix Version/s: 0.12.0
-
Component/s: Compiler (General)
-
Labels:None
-
Environment:
macOS High Sierra 10.13.5
Apple LLVM version 9.0.0 (clang-900.0.39.2)
-
Patch Info:Patch Available
I tried to compile the thrift compiler of 014f53f on macOS, but I could not.
This is an error message I got.
src/thrift/generate/t_py_generator.cc:338:25: error: 't_py_generator::lang_keywords' hides overloaded virtual function [-Werror,-Woverloaded-virtual]
std::set<std::string> lang_keywords() {
^
./src/thrift/generate/t_generator.h:106:33: note: hidden overloaded virtual function 't_generator::lang_keywords' declared here: different qualifiers (const vs none)
virtual std::set<std::string> lang_keywords() const;
^
1 error generated.
- links to