THRIFT-4644: Compiler cannot be compiled on macOS Client: compiler